--- a/Daniels.html
+++ b/Daniels.html
@@ -85,8 +85,11 @@
                         <a class="nav-link text-capitalize p-3 text-white underline-hover" href="#contact"> Contact </a>
                     </li>
 
-                    <button class="btn btn-outline-success mt-2 mb-2"><a href="index.html" id="logout">Log out </a></button>
+                    <button class="btn btn-outline-success mt-2 mb-2"><a href="index.html" id="logout">Log out
+                        </a></button>
 
+                    <div class="text-white mt-4 mx-3 fw-bold"> Hello, </div>
+                    <div class="text-white mt-4 mx-3 fw-bold" id="userdata"></div>
 
                 </ul>
             </div>
@@ -958,11 +961,10 @@
     <!-- footer -->
 
     <div class="footer h-100 bg-black text-center pt-5 pb-5 mt-5">
-        <span class=" footer-text">Copy Right 2018 © By Daniels All Rights Reserved</span>
+        <span class="footer-text">Copy Right 2018 © By Daniels All Rights Reserved</span>
     </div>
 
     </div>
-
 
     <!-- swiper JS -->
     <script src="./js/swiper-bundle.min.js"></script>
@@ -971,8 +973,13 @@
     <!-- typing Animation JS -->
     <script src="./js/typing.js"></script>
 
+    <!-- Script Smart System Js -->
+    <script src="./js/script.js"></script>
+
     <!-- bootstrap JS -->
     <script src="./js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 
 </html>
