--- a/index.html
+++ b/index.html
@@ -27,34 +27,33 @@
 </head>
 
 <body>
-    <div class="w-50 m-auto p-5 my-5 effect">
+  <div class="w-50 m-auto p-5 my-5 effect">
 
-      <h1 class="text-center text-capitalize ">smart login system</h1>
+    <h1 class="text-center text-capitalize ">smart login system</h1>
 
-      <div class="mt-3 pt-2 mb-2 pb-2">
-        <input type="email" id="Email" class="form-control border-0 rounded-2"
-          placeholder="Enter Your Email" required >
-      </div>
-
-      <div class="mt-3 pt-2 mb-2 pb-2">
-        <input type="password" id="Password" class="form-control border-0 rounded-2"
-          placeholder="Enter Your Password" required>
-
-       
-      </div>
-
-      <div id="sign-in"></div>
-    
-      <div id="error-text" class="textShow text-center Styling"> All inputs is required</div>
-      <div id="success-text" class="success-display text-center Styling-success"> Success</div>
-      <div class="d-grid gap-2 pt-3 mt-2">
-        <button type="button" class="btn btn-outline-info" id="loginText"><a href="#" id="website">Login</a></button>
-      </div>
-
-      <div class="text-center text-white mt-3 pt-2"> Don't have an account?
-        <span class="text-capitalize text-wrap"><a href="#" class="signUp" id="sign">sign up</a></span>
-      </div>
+    <div class="mt-3 pt-2 mb-2 pb-2">
+      <input type="email" id="Email" class="form-control border-0 rounded-2" placeholder="Enter Your Email" required>
     </div>
+
+    <div class="mt-3 pt-2 mb-2 pb-2">
+      <input type="password" id="Password" class="form-control border-0 rounded-2" placeholder="Enter Your Password"
+        required>
+
+
+    </div>
+
+    <div id="sign-in"></div>
+
+    <div id="error-text" class="textShow text-center Styling"> All inputs is required</div>
+    <div id="success-text" class="success-display text-center Styling-success"> Success</div>
+    <div class="d-grid gap-2 pt-3 mt-2">
+      <button type="button" class="btn btn-outline-info" id="loginText"><a href="#" id="website">Login</a></button>
+    </div>
+
+    <div class="text-center text-white mt-3 pt-2"> Don't have an account?
+      <span class="text-capitalize text-wrap"><a href="#" class="signUp" id="sign">sign up</a></span>
+    </div>
+  </div>
   <script src="./js/script.js"></script>
 
 </body>
