--- a/Daniels.html
+++ b/Daniels.html
@@ -56,7 +56,7 @@
 
             <!-- right header -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-lg-0" id="ListNav">
                     <li class="nav-item">
                         <a class="nav-link active text-capitalize text-white p-3 underline-text" id="unique"
                             aria-current="page" href="#home">Home</a>
